--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "~4.13.4",
     "jade": "~1.11.0",
     "json2csv": "^3.7.3",
+    "mongodb": "^2.2.21",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0"
   }
